--- a/modules/contract_insurance_invoice/view/invoice_line_list.xml
+++ b/modules/contract_insurance_invoice/view/invoice_line_list.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <tree string="Invoice Lines">
   <field name="description"/>
-  <field name="start_date"/>
-  <field name="end_date"/>
+  <field name="coverage_start"/>
+  <field name="coverage_end"/>
   <field name="amount">
       <suffix name="currency_symbol"/>
   </field>
