Fix issue #266 : make contract_insurance_invoice views inherit from account_invoice's

--- a/modules/contract_insurance_invoice/view/contract_invoice_form.xml
+++ b/modules/contract_insurance_invoice/view/contract_invoice_form.xml
@@ -7,5 +7,5 @@
     <label name="contract"/>
     <field name="contract"/>
     <label name="invoice"/>
-    <field name="invoice" view_ids="contract_insurance_invoice.invoice_view_form,contract_insurance_invoice.invoice_view_list"/>
+    <field name="invoice"/>
 </form>
