--- a/modules/commission/view/invoice_form.xml
+++ b/modules/commission/view/invoice_form.xml
@@ -1,12 +1,8 @@
 <?xml version="1.0"?>
 <data>
-    <xpath expr="/form/notebook/page[@id='invoice']/field[@name='end']" position="after">
-        <!-- <label name="contract_invoice"/> -->
-        <!-- <field name="contract_invoice"/> -->
-    </xpath>
     <xpath expr="/form/notebook/page[@id='invoice']" position="after">
         <page string="Commissions" name="com_invoices">
-            <field name="com_invoices" mode="tree,form" view_ids="commission.com_invoice_view_list,contract_insurance_invoice.invoice_view_form"/>
+            <field name="com_invoices" mode="tree,form" view_ids="commission.com_invoice_view_list,account_invoice.invoice_view_form"/>
         </page>
     </xpath>
 </data>
