--- a/modules/contract_insurance_invoice/view/invoice_form.xml
+++ b/modules/contract_insurance_invoice/view/invoice_form.xml
@@ -1,84 +1,52 @@
 <?xml version="1.0"?>
-<form string="Invoice">
-    <notebook colspan="6">
-        <page string="Invoice" id="invoice" col="6">
-            <label name="invoice_date"/>
-            <field name="invoice_date"/>
-            <label name="start"/>
-            <field name="start"/>
-            <label name="end"/>
-            <field name="end"/>
-            <field name="lines" colspan="6" view_ids="contract_insurance_invoice.invoice_line_view_list,contract_insurance_invoice.invoice_line_view_form"/>
-            <group col="2" colspan="6" id="taxes_amount_state_buttons">
-                <group col="1" colspan="1" id="taxes">
-                    <field name="taxes" view_ids="account_invoice.invoice_tax_view_tree_sequence"/>
-                </group>
-                <group col="4" colspan="1" id="amount_state_buttons">
-                    <group col="2" colspan="2" id="reconciled_state">
-                        <label name="reconciled"/>
-                        <field name="reconciled" xexpand="0"/>
-                        <label name="state"/>
-                        <field name="state"/>
-                    </group>
-                    <group col="2" colspan="2" id="amount">
-                        <label name="base_amount" xalign="1.0" xexpand="1"/>
-                        <group id="base_amount">
-                            <field name="base_amount" xalign="1.0" xexpand="0"/>
-                            <label name="currency_symbol" string="" xexpand="0" xalign="0"/>
-                        </group>
-                        <label name="fees" xalign="1.0" xexpand="1"/>
-                        <group id="fees">
-                            <field name="fees" xalign="1.0" xexpand="0"/>
-                            <label name="currency_symbol" string="" xexpand="0" xalign="0"/>
-                        </group>
-                        <label name="tax_amount" xalign="1.0" xexpand="1"/>
-                        <group id="tax_amount">
-                            <field name="tax_amount" xalign="1.0" xexpand="0"/>
-                            <label name="currency_symbol" string="" xexpand="0" xalign="0"/>
-                        </group>
-                        <label name="total_amount" xalign="1.0" xexpand="1"/>
-                        <group id="total_amount">
-                            <field name="total_amount" xalign="1.0" xexpand="0"/>
-                            <label name="currency_symbol" string="" xexpand="0" xalign="0"/>
-                        </group>
-                    </group>
-                    <group col="5" colspan="4" id="buttons">
-                        <button name="cancel" string="_Cancel" icon="tryton-cancel" confirm="Are you sure to cancel the invoice?"/>
-                        <button name="draft" string="_Draft" icon="tryton-go-previous"/>
-                        <button name="validate_invoice" string="Validate" help="Also known as Pro Forma" icon="tryton-go-next"/>
-                        <button name="post" string="_Post" icon="tryton-ok"/>
-                        <button name="pay" string="_Pay" icon="tryton-go-next"/>
-                    </group>
-                </group>
-            </group>
-        </page>
-        <page string="Other Info" id="info">
-            <label name="company"/>
-            <field name="company"/>
-            <label name="payment_term"/>
-            <field name="payment_term"/>
-            <label name="currency"/>
-            <field name="currency"/>
-            <newline/>
-            <label name="account"/>
-            <field name="account"/>
-            <label name="accounting_date"/>
-            <field name="accounting_date"/>
-            <label name="move"/>
-            <field name="move"/>
-            <label name="cancel_move"/>
-            <field name="cancel_move"/>
-            <separator name="comment" colspan="4"/>
-            <field name="comment" colspan="4" spell="Eval('party_lang')"/>
-        </page>
-        <page string="Payment" id="payment">
-            <label name="amount_to_pay_today"/>
-            <field name="amount_to_pay_today"/>
-            <label name="amount_to_pay"/>
-            <field name="amount_to_pay"/>
-            <field name="payment_lines" colspan="4" view_ids="account_invoice.move_line_view_list_payment"/>
-            <field name="reconciliation_lines" colspan="4"/>
-        </page>
-    </notebook>
-    <field name="party_lang" invisible="1" colspan="6"/>
-</form>
+<data>
+    <xpath expr="/form/label[@name='journal']" position="replace"/>
+    <xpath expr="/form/field[@name='journal']" position="replace"/>
+    <xpath expr="/form/label[@name='invoice_address']" position="replace"/>
+    <xpath expr="/form/field[@name='invoice_address']" position="replace"/>
+    <xpath expr="/form/field[@name='number']" position="after">
+        <label name="start"/>
+        <field name="start"/>
+        <label name="end"/>
+        <field name="end"/>
+    </xpath>
+    <xpath expr="/form/notebook/page[@id='invoice']/label[@name='payment_term']" position="replace"/>
+    <xpath expr="/form/notebook/page[@id='invoice']/field[@name='payment_term']" position="replace"/>
+    <xpath expr="/form/notebook/page[@id='invoice']/label[@name='currency']" position="replace"/>
+    <xpath expr="/form/notebook/page[@id='invoice']/field[@name='currency']" position="replace"/>
+    <xpath expr="/form/notebook/page[@id='invoice']/group[@id='taxes_amount_state_buttons']/group[@id='amount_state_buttons']/group[@id='amount']/label[@name='untaxed_amount']" position="replace"/>
+    <xpath expr="/form/notebook/page[@id='invoice']/group[@id='taxes_amount_state_buttons']/group[@id='amount_state_buttons']/group[@id='amount']/field[@name='untaxed_amount']" position="replace"/>
+    <xpath expr="/form/notebook/page[@id='invoice']/group[@id='taxes_amount_state_buttons']/group[@id='amount_state_buttons']/group[@id='amount']/label[@name='tax_amount']" position="before">
+        <label name="base_amount" xalign="1.0" xexpand="1"/>
+        <group id="base_amount">
+            <field name="base_amount" xalign="1.0" xexpand="0"/>
+            <label name="currency_symbol" string="" xexpand="0" xalign="0"/>
+        </group>
+        <label name="fees" xalign="1.0" xexpand="1"/>
+        <group id="fees">
+            <field name="fees" xalign="1.0" xexpand="0"/>
+            <label name="currency_symbol" string="" xexpand="0" xalign="0"/>
+        </group>
+    </xpath>
+    <xpath expr="/form/notebook/page[@id='invoice']/group[@id='taxes_amount_state_buttons']/group[@id='amount_state_buttons']/group[@id='amount']/field[@name='tax_amount']" position="replace">
+        <group id="tax_amount">
+            <field name="tax_amount" xalign="1.0" xexpand="0"/>
+            <label name="currency_symbol" string="" xexpand="0" xalign="0"/>
+        </group>
+    </xpath>
+    <xpath expr="/form/notebook/page[@id='invoice']/group[@id='taxes_amount_state_buttons']/group[@id='amount_state_buttons']/group[@id='amount']/field[@name='total_amount']" position="replace">
+        <group id="total_amount">
+            <field name="total_amount" xalign="1.0" xexpand="0"/>
+            <label name="currency_symbol" string="" xexpand="0" xalign="0"/>
+        </group>
+    </xpath>
+    <xpath expr="/form/notebook/page[@id='info']/field[@name='company']" position="after">
+        <label name="payment_term"/>
+        <field name="payment_term"/>
+        <label name="currency"/>
+        <field name="currency"/>
+    </xpath>
+    <xpath expr="/form/notebook/page[@id='payment']/field[@name='payment_lines']" position="after">
+        <field name="reconciliation_lines" colspan="4"/>
+    </xpath>
+</data>
