Add possibility to execute code and visualize field values from the debug model wizard

--- a/modules/debug/view/field_info_list.xml
+++ b/modules/debug/view/field_info_list.xml
@@ -8,4 +8,5 @@
     <field name="is_readonly"/>
     <field name="is_invisible"/>
     <field name="has_domain"/>
+    <field name="calculated_value" expand="1"/>
 </tree>
