--- a/modules/debug/view/model_info_form.xml
+++ b/modules/debug/view/model_info_form.xml
@@ -7,4 +7,10 @@
   <field name="field_infos" colspan="4" readonly="1"/>
   <label name="hide_functions"/>
   <field name="hide_functions"/>
+  <label name="id_to_calculate"/>
+  <field name="id_to_calculate"/>
+  <label name="to_evaluate"/>
+  <field name="to_evaluate"/>
+  <label name="evaluation_result"/>
+  <field name="evaluation_result"/>
 </form>
