Improve Contract Revision Mixin - Add cancel on ContractInvoice

--- a/modules/contract_insurance_invoice/view/contract_invoice_list.xml
+++ b/modules/contract_insurance_invoice/view/contract_invoice_list.xml
@@ -6,4 +6,5 @@
     <field name="invoice"/>
     <field name="invoice_state"/>
     <button name="reinvoice" string="Reinvoice"/>
+    <button name="cancel" string="Cancel"/>
 </tree>
