Fix comments, improve target model detection for relation fields

--- a/modules/debug/view/field_info_list.xml
+++ b/modules/debug/view/field_info_list.xml
@@ -3,6 +3,7 @@
     <field name="name"/>
     <field name="string"/>
     <field name="kind"/>
+    <field name="target_model"/>
     <field name="is_function"/>
     <field name="is_required"/>
     <field name="is_readonly"/>
