--- a/modules/party_cog/view/party_synthesis_form.xml
+++ b/modules/party_cog/view/party_synthesis_form.xml
@@ -25,8 +25,8 @@
         <field name="name"/>
     </group>
     <separator string="Contact" colspan="6" id="contact"/>
-    <label name="main_address_rec_name"/>
-    <field name="main_address_rec_name" colspan="5"/>
+    <label name="main_address"/>
+    <field name="main_address" colspan="5"/>
     <label name="phone"/>
     <field name="phone"/>
     <label name="mobile"/>
