Use selection_sorted rather than sort_selection to manage Dict field ordering

--- a/modules/rule_engine/view/parameter_form.xml
+++ b/modules/rule_engine/view/parameter_form.xml
@@ -9,8 +9,8 @@
   <field name="type_"/>
   <label name="digits"/>
   <field name="digits"/>
-  <label name="sort_selection"/>
-  <field name="sort_selection"/>
+  <label name="selection_sorted"/>
+  <field name="selection_sorted"/>
   <newline/>
   <label name="selection"/>
   <field name="selection" colspan="3"/>
