--- a/modules/account_payment_sepa_contract/view/contract_billing_information_form.xml
+++ b/modules/account_payment_sepa_contract/view/contract_billing_information_form.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <data>
-    <xpath expr="/form/notebook/page[@id='invoicing']/field[@name='direct_debit_account']" position="after">
+    <xpath expr="/form/field[@name='direct_debit_account']" position="after">
         <label name="sepa_mandate"/>
         <field name="sepa_mandate"/>
     </xpath>
