--- a/modules/rule_engine/view/rule_engine_form.xml
+++ b/modules/rule_engine/view/rule_engine_form.xml
@@ -9,7 +9,7 @@
   <label name="status"/>
   <field name="status"/>
   <notebook>
-    <page name="code" string="Algorithm">
+    <page name="algorithm" string="Algorithm">
       <field name="algorithm" widget="source" context_tree="data_tree" colspan="4" xexpand="1" xfill="1"/>
       <label name="extra_data"/>
       <field name="extra_data" xalign="0" colspan="1"/>
