--- a/modules/contract_insurance_invoice/view/product_form.xml
+++ b/modules/contract_insurance_invoice/view/product_form.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <data>
     <xpath expr="/form/notebook/page[@id='admin']" position="before">
-        <page string="Invoice Parameters" name="invoice_parameters">
+        <page name="billing_modes">
             <label name="change_billing_modes_order"/>
             <field name="change_billing_modes_order"/>
             <newline/>
