--- a/modules/rule_engine/view/rule_engine_form.xml
+++ b/modules/rule_engine/view/rule_engine_form.xml
@@ -9,7 +9,7 @@
   <label name="status"/>
   <field name="status"/>
   <notebook>
-    <page name="code" string="Algorithm">
+    <page name="algorithm">
       <field name="algorithm" widget="source" context_tree="data_tree" colspan="4" xexpand="1" xfill="1"/>
       <label name="extra_data"/>
       <field name="extra_data" xalign="0" colspan="1"/>
@@ -19,13 +19,13 @@
       <field name="tables_used" colspan="4"/>
       <field name="parameters" view_ids="rule_engine.parameter_tree,rule_engine.parameter_form" colspan="4"/>
     </page>
-    <page id="tags" string="Tags">
+    <page name="tags">
       <field name="tags" colspan="4"/>
     </page>
     <page name="test_cases">
       <field name="test_cases" colspan="4"/>
     </page>
-    <page string="Debug" id="executions" col="2">
+    <page name="debug_mode" col="2">
       <label name="debug_mode"/>
       <field name="debug_mode"/>
       <field name="exec_logs" colspan="2"/>
