--- a/modules/offered_insurance/view/party_form.xml
+++ b/modules/offered_insurance/view/party_form.xml
@@ -9,8 +9,7 @@
         position="inside">
         <page id="insurer" string="Insurer"
             states="{'invisible': Bool(~Eval('is_insurer'))}">
-            <field name="insurer_role" mode="form"
-                view_ids="offered_insurance.insurer_view_form_hosted"/>
-            </page>
+            <field name="insurer_role" mode="form"/>
+        </page>
         </xpath>
     </data>
