--- a/modules/commission/view/invoice_form.xml
+++ b/modules/commission/view/invoice_form.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <data>
     <xpath expr="/form/notebook/page[@id='invoice']" position="after">
-        <page string="Commissions" name="com_invoices">
+        <page name="com_invoices">
             <field name="com_invoices" mode="tree,form" view_ids="commission.com_invoice_view_list,account_invoice.invoice_view_form"/>
         </page>
     </xpath>
