--- a/modules/contract_clause/view/contract_form.xml
+++ b/modules/contract_clause/view/contract_form.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <data>
     <xpath expr="/form/notebook/page[@id='admin']" position="before">
-        <page string="Clauses" name="clauses">
+        <page name="clauses">
             <field name="clauses"/>
         </page>
     </xpath>
