--- a/modules/account_cog/view/move_line_synthesis_form.xml
+++ b/modules/account_cog/view/move_line_synthesis_form.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<form string="Payment Information">
+<form string="Payments">
     <label name="date"/>
     <field name="date"/>
     <label name="party"/>
@@ -14,7 +14,7 @@
         <label name="currency_symbol" string="" xexpand="0" xalign="0"/>
     </group>
     <notebook colspan="4">
-        <page string="Reconciliation Information" id="reconciliation">
+        <page string="Reconciliation" id="reconciliation">
             <field name="reconciliation_lines"/>
         </page>
         <page string="Other Info" id="info">
