--- a/modules/offered/view/extra_data_form.xml
+++ b/modules/offered/view/extra_data_form.xml
@@ -36,7 +36,7 @@
             <newline/>
             <field name="sub_datas" yexpand="1" yfill="1" colspan="4"/>
         </page>
-        <page id='tags' string='Tags'>
+        <page name="tags">
             <field name="tags" colspan="4"/>
         </page>
     </notebook>
