--- a/modules/cog_utils/view/tag_form.xml
+++ b/modules/cog_utils/view/tag_form.xml
@@ -10,8 +10,8 @@
             <field name="parent"/>
             <field name="childs" colspan="4"/>
         </page>
-        <page id='rules' string="Rules">
-            <field name="rules" colspan="4"/>
+        <page name='tagged_objects'>
+            <field name="tagged_objects" colspan="4"/>
         </page>
     </notebook>
 </form>
