--- a/modules/process/view/process_form.xml
+++ b/modules/process/view/process_form.xml
@@ -21,6 +21,9 @@
       </group>
       <field name="transitions" yfill="1" colspan="2"/>
     </page>
+    <page name="tags">
+      <field name="tags" colspan="4"/>
+    </page>
     <page string="XML" id="xml">
       <group id="form_customization" col="2" yexpand="1" yfill="1">
         <group id="customization_data" col="2" yexpand="1" yfill="1">
