--- a/modules/process/view/step_form.xml
+++ b/modules/process/view/step_form.xml
@@ -22,6 +22,9 @@
       <label name="exiting_wizard"/>
       <field name="exiting_wizard"/>
     </page>
+    <page name="tags">
+      <field name="tags" colspan="4"/>
+    </page>
     <page string="Authorizations" id="authorizations">
       <field name="authorizations" xexpand="1" xfill="1" yexpand="1" yfill="1"/>
     </page>
