--- a/modules/rule_engine/view/context_form.xml
+++ b/modules/rule_engine/view/context_form.xml
@@ -3,4 +3,5 @@
   <label name="name"/>
   <field name="name"/>
   <field name="allowed_elements" colspan="4"/>
+  <field name="tags" colspan="4"/>
 </form>
