Add contract to invoice form/list view

--- a/modules/contract_insurance_invoice/view/invoice_form.xml
+++ b/modules/contract_insurance_invoice/view/invoice_form.xml
@@ -5,6 +5,8 @@
     <xpath expr="/form/label[@name='invoice_address']" position="replace"/>
     <xpath expr="/form/field[@name='invoice_address']" position="replace"/>
     <xpath expr="/form/field[@name='number']" position="after">
+        <label name="contract"/>
+        <field name="contract"/>
         <label name="start"/>
         <field name="start"/>
         <label name="end"/>
