--- a/modules/contract_insurance_invoice/view/invoice_list.xml
+++ b/modules/contract_insurance_invoice/view/invoice_list.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <data>
     <xpath expr="/tree/field[@name='number']" position="before">
-        <field name="state"/>
+        <field name="contract"/>
         <field name="start"/>
         <field name="end"/>
     </xpath>
@@ -25,7 +25,6 @@
             <suffix name="currency_symbol"/>
         </field>
     </xpath>
-    <xpath expr="/tree/field[@name='state']" position="replace"/>
     <xpath expr="/tree/field[@name='amount_to_pay_today']" position="replace">
         <field name="amount_to_pay_today" sum="To be paid">
             <suffix name="currency_symbol"/>
