--- a/modules/contract/view/contract_tree.xml
+++ b/modules/contract/view/contract_tree.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <tree string="Contract">
-    <field name="contract_number"/>
+    <field name="reference"/>
     <field name="subscriber"/>
     <field name="status"/>
     <field name="start_date"/>
