--- a/modules/loan/view/options_displayer_form.xml
+++ b/modules/loan/view/options_displayer_form.xml
@@ -13,7 +13,7 @@
                 <field name="default_share" factor="100" xexpand="0"/>
                 <label string="%" id="percent" xexpand="0" xalign="0"/>
             </group>
-            <field name="loans" colspan="2"/>
+            <field name="loans" colspan="2" widget="multiselection"/>
         </group>
     </xpath>
 </data>
