--- a/modules/offered_insurance/view/document_template_form.xml
+++ b/modules/offered_insurance/view/document_template_form.xml
@@ -22,7 +22,7 @@
       <field name="mail_body" colspan="2"/>
     </page>
     <page name="tags">
-      <field name="tags" colspan="4"/>
+      <field name="tags" colspan="4" widget="multiselection"/>
     </page>
   </notebook>
 </form>
