--- a/modules/offered/view/offered_form.xml
+++ b/modules/offered/view/offered_form.xml
@@ -32,7 +32,7 @@
                 <newline/>
                 <field name="extra_data" colspan="2"/>
             </group>
-            <field name="tags" colspan="4"/>
+            <field name="tags" colspan="4" widget="multiselection"/>
         </page>
     </notebook>
 </form>
