Page nodes need either an id or a name

--- a/modules/table/view/table_definition_form.xml
+++ b/modules/table/view/table_definition_form.xml
@@ -15,7 +15,7 @@
             <field name="dimensions"/>
             <newline/>
         </page>
-        <page string="tags">
+        <page name="tags">
             <field name="tags" colspan="4"/>
         </page>
     </notebook>
