--- a/modules/contract_life_clause/view/option_form.xml
+++ b/modules/contract_life_clause/view/option_form.xml
@@ -2,7 +2,7 @@
 <data>
     <xpath expr="/form/notebook" position="inside">
         <page name="beneficiary_clause"
-            states="{'invisible': ~Eval('with_beneficiary_clause')}">
+            states="{'invisible': ~Eval('has_beneficiary_clause')}">
             <label name="beneficiary_clause"/>
             <field name="beneficiary_clause"/>
             <field name="customized_beneficiary_clause" colspan="4"/>
