--- a/modules/offered_insurance/view/extra_premium_kind_form.xml
+++ b/modules/offered_insurance/view/extra_premium_kind_form.xml
@@ -4,4 +4,6 @@
   <field name="name"/>
   <label name="code"/>
   <field name="code"/>
+  <label name="is_discount"/>
+  <field name="is_discount"/>
 </form>
