--- a/modules/contract_insurance/view/extra_premium_form.xml
+++ b/modules/contract_insurance/view/extra_premium_form.xml
@@ -5,16 +5,27 @@
   <label name="calculation_kind"/>
   <field name="calculation_kind"/>
   <label name="flat_amount"/>
-  <group id="flat_amount" states="{'invisible': Eval('calculation_kind') != 'flat'}">
-    <field name="flat_amount" xexpand="0"/>
-    <label name="currency_symbol" string="" xexpand="0" xalign="0"/>
+  <group id="flat_amounts" col="99" xexpand="0" xfill="0" >
+	  <group id="flat_amount_discount" states="{'invisible': Or(Eval('calculation_kind') != 'flat', ~Eval('is_discount'))}">
+	    <field name="flat_amount" xexpand="0" factor="-1"/>
+	    <label name="currency_symbol" string="" xexpand="0" xalign="0"/>
+	  </group>
+	  <group id="flat_amount" states="{'invisible': Or(Eval('calculation_kind') != 'flat', Bool(Eval('is_discount')))}">
+	    <field name="flat_amount" xexpand="0"/>
+	    <label name="currency_symbol" string="" xexpand="0" xalign="0"/>
+	  </group>
   </group>
   <newline/>
   <label name="rate"/>
-  <group id="rate">
-    <field name="rate" xexpand="0" factor="100"/>
-    <label string="%" id="rate" xexpand="0" xalign="0"
-      states="{'invisible': Eval('calculation_kind') != 'rate'}"/>
+  <group id="rates" col="99" xexpand="0" xfill="0" >
+      <group id="rate_discount" states="{'invisible': Or(Eval('calculation_kind') != 'rate', ~Eval('is_discount')) }">
+          <field name="rate" xexpand="0" factor="-100" />
+          <label string="%" id="rate" xexpand="0" xalign="0"/>
+      </group>
+      <group id="rate" states="{'invisible': Or(Eval('calculation_kind') != 'rate',Bool(Eval('is_discount')))}" >
+          <field name="rate" xexpand="0" factor="100"/>
+          <label string="%" id="rate" xexpand="0" xalign="0"/>
+      </group>
     </group>
     <newline/>
     <label name="time_limited"/>
@@ -30,6 +41,7 @@
     <field name="end_date"/>
     <newline/>
     <group id="invisible" states="{'invisible': True}">
-      <field name="currency"/>
+ 		<field name="currency"/>    
+      	<field name="is_discount"/>
     </group>
   </form>
