--- a/modules/loan/view/extra_premium_form.xml
+++ b/modules/loan/view/extra_premium_form.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <data>
-  <xpath expr="/form/group[@id='rate']" position="after">
+  <xpath expr="//group[@id='rate']" position="after">
     <newline/>
     <label name="capital_per_mil_rate"/>
     <group id="capital_per_mil">
