fix issue #291 and others fixes on extra premium

--- a/modules/contract_insurance/view/manage_extra_premium_select_form.xml
+++ b/modules/contract_insurance/view/manage_extra_premium_select_form.xml
@@ -2,9 +2,10 @@
 <form string="Manage Extra Premium">
   <label name="covered_element"/>
   <field name="covered_element" colspan="3" widget="selection"/>
-  <field name="extra_premiums" colspan="2" expand_toolbar="0"/>
-  <field name="options" colspan="2" expand_toolbar="0"/>
+  <field name="extra_premiums" colspan="2" expand_toolbar="0" mode="tree"/>
+  <field name="options" colspan="2" expand_toolbar="0" mode="tree"/>
   <field name="contract" invisible="1"/>
   <field name="option" invisible="1"/>
   <field name="kind" invisible="1"/>
+  <field name="extra_premium" invisible="1"/>
 </form>
