--- a/modules/contract_insurance_invoice/view/invoice_list.xml
+++ b/modules/contract_insurance_invoice/view/invoice_list.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0"?>
 <data>
+    <xpath expr="/tree" position="replace_attributes">
+        <tree colors="If(Eval('state') == 'paid', 'green', If(Eval('state') == 'posted', 'blue', 'black'))"/>
+    </xpath>
     <xpath expr="/tree/field[@name='number']" position="before">
         <field name="contract"/>
         <field name="start"/>
