Extra Premium : bugs fix + indentation xml + unit test

--- a/modules/offered_insurance/view/extra_premium_kind_form.xml
+++ b/modules/offered_insurance/view/extra_premium_kind_form.xml
@@ -30,5 +30,7 @@
           <label string="%" id="rate" xexpand="0" xalign="0"/>
       </group>
     </group>
-
+  <group id="invisible" states="{'invisible': True}">
+ 		<field name="currency"/>    
+    </group>
 </form>
