Add list view specific for a line to pay

--- a/modules/contract_insurance_invoice/view/invoice_form.xml
+++ b/modules/contract_insurance_invoice/view/invoice_form.xml
@@ -48,7 +48,7 @@
         <label name="currency"/>
         <field name="currency"/>
     </xpath>
-    <xpath expr="/form/notebook/page[@id='payment']/field[@name='payment_lines']" position="after">
-        <field name="reconciliation_lines" colspan="4"/>
+    <xpath expr="/form/notebook/page[@id='payment']/field[@name='payment_lines']" position="replace">
+        <field name="lines_to_pay" colspan="4" view_ids="account_cog.move_line_to_pay_view_list"/>
     </xpath>
 </data>
