--- a/modules/offered_insurance/view/product_form.xml
+++ b/modules/offered_insurance/view/product_form.xml
@@ -20,4 +20,7 @@
             <field name="term_renewal_rules" colspan="4"/>
         </page>
     </xpath>
+    <xpath expr="/form/notebook/page[@id='managers']/notebook/page[@id='pricing']" position="inside">
+        <field name="premium_dates" colspan="4" mode="form" expand_toolbar="0"/>
+    </xpath>
 </data>
