--- a/modules/contract_insurance/view/option_form.xml
+++ b/modules/contract_insurance/view/option_form.xml
@@ -5,15 +5,15 @@
         <field name="extra_data" colspan="2" no_command="1"/>
     </xpath>
     <xpath expr="/form/notebook/page[@id='main_data']" position="after">
-        <page string="Discounts" id="extra_premium_discount">
+        <page name="extra_premium_discounts">
             <field name="extra_premium_discounts" colspan="4"/>
             <button string="Propagate" name="propagate_extra_premiums" colspan="4"/>
         </page>
-        <page string="Increases" id="extra_premium_increase">
+        <page name="extra_premium_increases">
             <field name="extra_premium_increases" colspan="4"/>
             <button string="Propagate" name="propagate_extra_premiums" colspan="4"/>
         </page>
-        <page string="Exclusions" id="exclusions">
+        <page name="exclusions">
             <field name="exclusions" colspan="4"/>
             <button string="Propagate" name="propagate_exclusions" colspan="4"/>
         </page>
