--- a/modules/party_cog/view/relation_type_form.xml
+++ b/modules/party_cog/view/relation_type_form.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <data>
-    <xpath expr="/form/label[@code='name']" position="after">
+    <xpath expr="/form/field[@name='name']" position="after">
         <label name="code"/>
         <field name="code"/>
     </xpath>
