--- a/modules/party_cog/view/relation_type_tree.xml
+++ b/modules/party_cog/view/relation_type_tree.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <data>
-    <xpath expr="/tree/field[@code='name']" position="after">
+    <xpath expr="/tree/field[@name='name']" position="after">
         <field name="code"/>
     </xpath>
 </data>
