--- a/modules/endorsement/view/endorsement_form.xml
+++ b/modules/endorsement/view/endorsement_form.xml
@@ -12,6 +12,7 @@
     <group id="endorsements" colspan="2" yexpand="1" yfill="1">
         <field name="contract_endorsements"/>
     </group>
+    <field name="endorsement_summary" colspan="2"/>
     <newline/>
     <group id="workflow" colspan="4">
         <button string="Draft" name="draft"/>
