--- a/modules/contract_insurance/view/manage_extra_premium_select_option_list.xml
+++ b/modules/contract_insurance/view/manage_extra_premium_select_option_list.xml
@@ -2,4 +2,5 @@
 <tree string="Select Option" editable="bottom">
   <field name="selected"/>
   <field name="option_name"/>
+  <field name="extra_premiums"/>
 </tree>
